--- a/bankaccount/index.html
+++ b/bankaccount/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 13 - The Bank Account Application</title>
-    <script src="js/script.js"></script>
+    
 </head>
 <body>
-    
+    <h2>Welcome to The Bank Account Application!</h2>
+    <button id='name'>Name</button>
+    <button id='deposit'>Deposit</button>
+    <button id='withdraw'>Withdrawal</button>
+    <div id="showInfo"></div>
+    <script src="js/script.js"></script>
 </body>
 </html>
